# yurl

./: .gitattributes  Cargo.toml  LICENSE  Makefile  README.md
benches/: run.sh
demo/: demo-crud.tape  demo.tape  server.rs
docs/: cookbook.md  demo-crud.tape  guide.md  interactive.md  requests.yaml
src/: atom.rs  cache.rs  config.rs  error.rs  format_json.rs  format_yaml.rs  interactive.rs  main.rs  shortcut.rs  template.rs  yaml_util.rs
src/interactive/: driver.rs  help.rs  mod.rs
tests/: integration.rs  one-off.json  server.rs  spec_mockinx.rs
tests/specs/: edge-cases.yaml  errors.yaml  features.yaml  interactive.yaml
