[package]
name = "yurl"
version = "0.13.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "HTTP client — batch, interactive, concurrent, streaming, output routing, caching"
keywords = ["http", "cli", "json", "curl", "rest"]
categories = ["command-line-utilities", "web-programming::http-client"]
repository = "https://github.com/ogheorghies/yurl"

[dependencies]
arc-swap = "1"
argh = "0.1"
base64 = "0.22"
console = "0.15"
futures-util = "0.3"
indicatif = "0.17"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
rusqlite = { version = "0.34", features = ["bundled"] }
rustyline = "15"
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
url = "2"
yttp = "0.0.7"

[[bin]]
name = "jurl"
path = "src/main.rs"

[[bin]]
name = "yurl"
path = "src/main.rs"

[dev-dependencies]
axum = "0.8"
mockinx = "0.2.1"
multer = "3"
reqwest = { version = "0.12", features = ["blocking"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5"

[[example]]
name = "demo-server"
path = "docs/server.rs"
